--- a/references.bib
+++ b/references.bib
@@ -286,3 +286,93 @@
   eprint = {https://publications.ersnet.org//content/erj/64/suppl_68/OA5572.full.pdf},
   journal = {European Respiratory Journal}}
 }
+
+@article{doamekpor2015,
+	title = {Allostatic Load in Foreign-Born and US-Born Blacks: Evidence From the 2001{\textendash}2010 National Health and Nutrition Examination Survey},
+	author = {Doamekpor, Lauren A. and Dinwiddie, Gniesha Y.},
+	year = {2015},
+	month = {03},
+	date = {2015-03},
+	journal = {American Journal of Public Health},
+	pages = {591--597},
+	volume = {105},
+	number = {3},
+	doi = {10.2105/ajph.2014.302285},
+	url = {http://dx.doi.org/10.2105/AJPH.2014.302285},
+	langid = {en}
+}
+
+@article{brown2017,
+	title = {Hypertension among US-born and foreign-born non-Hispanic Blacks},
+	author = {Brown, Alison G.M. and Houser, Robert F. and Mattei, Josiemer and Mozaffarian, Dariush and Lichtenstein, Alice H. and Folta, Sara C.},
+	year = {2017},
+	month = {12},
+	date = {2017-12},
+	journal = {Journal of Hypertension},
+	pages = {2380--2387},
+	volume = {35},
+	number = {12},
+	doi = {10.1097/hjh.0000000000001489},
+	url = {http://dx.doi.org/10.1097/HJH.0000000000001489},
+	langid = {en}
+}
+
+@article{nardone2020,
+	title = {Associations between historical residential redlining and current age-adjusted rates of emergency department visits due to asthma across eight cities in California: an ecological study},
+	author = {Nardone, Anthony and Casey, Joan A and Morello-Frosch, Rachel and Mujahid, Mahasin and Balmes, John R and Thakur, Neeta},
+	year = {2020},
+	month = {01},
+	date = {2020-01},
+	journal = {The Lancet Planetary Health},
+	pages = {e24--e31},
+	volume = {4},
+	number = {1},
+	doi = {10.1016/s2542-5196(19)30241-4},
+	url = {http://dx.doi.org/10.1016/S2542-5196(19)30241-4},
+	langid = {en}
+}
+
+@article{schuyler2022,
+	title = {Historical Redlining Impacts Contemporary Environmental and Asthma-related Outcomes in Black Adults},
+	author = {Schuyler, Alexander J. and Wenzel, Sally E.},
+	year = {2022},
+	month = {10},
+	date = {2022-10-01},
+	journal = {American Journal of Respiratory and Critical Care Medicine},
+	pages = {824--837},
+	volume = {206},
+	number = {7},
+	doi = {10.1164/rccm.202112-2707oc},
+	url = {http://dx.doi.org/10.1164/rccm.202112-2707OC},
+	langid = {en}
+}
+
+@article{levy2018,
+	title = {Established and Emerging Environmental Contributors to Disparities in Asthma and Chronic Obstructive Pulmonary Disease},
+	author = {Levy, Jonathan I. and {Quirós-Alcalá}, Lesliam and Fabian, M. Patricia and Basra, Komal and Hansel, Nadia N.},
+	year = {2018},
+	month = {05},
+	date = {2018-05-25},
+	journal = {Current Epidemiology Reports},
+	pages = {114--124},
+	volume = {5},
+	number = {2},
+	doi = {10.1007/s40471-018-0149-9},
+	url = {http://dx.doi.org/10.1007/s40471-018-0149-9},
+	langid = {en}
+}
+
+@article{gaffney2021,
+	title = {Socioeconomic Inequality in Respiratory Health in the US From 1959 to 2018},
+	author = {Gaffney, Adam W. and Himmelstein, David U. and Christiani, David C. and Woolhandler, Steffie},
+	year = {2021},
+	month = {07},
+	date = {2021-07-01},
+	journal = {JAMA Internal Medicine},
+	pages = {968},
+	volume = {181},
+	number = {7},
+	doi = {10.1001/jamainternmed.2021.2441},
+	url = {http://dx.doi.org/10.1001/jamainternmed.2021.2441},
+	langid = {en}
+}
