--- a/who-is-healthy-anyways.qmd
+++ b/who-is-healthy-anyways.qmd
@@ -72,7 +72,7 @@ In recent years, increased awareness of the history of structural racism and dis
 
 Spirometry reference equations are developed with data from from "healthy" volunteers, who do not smoke, are asymptomatic, and have not been diagnosed with lung diseases [@quanjer2012; @bowerman2023]. This rather loose definition of what constitutes as healthy could potentially lead to a biased reference populations in which White volunteers have higher lung function values, simply because they were less likely to have been exposed to environmental and social factors that diminish lung function.
 
-The effects of social determinants of health on lung function have been discussed in the literature for decades. The 1991 official statements of the American Thoracic Society on interpretative strategies for lung function testing discussed the effects of environmental factors, smoking, indoor and outdoor air pollution, occupational exposures, built environment and socio-economic factors as the main sources of between-individual variability in lung function[@lungfun1991]. The statement also mentions racial differences that persist after adjusting for age, height, smoking, air pollution, and altitude, and hypothesizes that these differences may in part be due to body measurements, environmental differences, nutrition, physical activity, and socioeconomic factors [@lungfun1991]. A 1986 review of between-individual variation in FVC attributed up to 30% of variation to biological sex, up to 30% to age, height, and weight, 10% to race, 3% to measurement error, and 27% to unexplained factors[@becklake1986]. Our study focuses on the proportion of variability that was historically attributed to race can be explained by social determinants of health.
+The effects of social determinants of health (SDoH) on lung function have been discussed in the literature for decades. The 1991 ATS official statements on the interpretative strategies for lung function testing discussed the effects of environmental factors, smoking, indoor and outdoor air pollution, occupational exposures, built environment and socio-economic factors as the main sources of between-individual variability in lung function[@lungfun1991]. The statement also mentions racial differences that persist after adjusting for age, height, smoking, air pollution, and altitude, and hypothesizes that these differences may in part be due to body measurements, environmental differences, nutrition, physical activity, and socioeconomic factors [@lungfun1991]. A 1986 review of between-individual variation in FVC attributed up to 30% of variation to biological sex, up to 30% to age, height, and weight, 10% to race, 3% to measurement error, and 27% to unexplained factors[@becklake1986]. Our study focuses on the proportion of variability that was historically attributed to race can be explained by social determinants of health.
 
 Our understanding of the contribution of environmental and social factors to racial differences in lung function remains limited. A 2022 systematic review found two representative studies in the US population[@holland2022], one focused on adults[@harik-khan2001] and one on children[@harik-khan2004]. The study on adults attributed 35-39% of the racial gap in lung function to sitting height, 2.5-7.5% to poverty, and 2.0-4.7% to education [@harik-khan2001]. In children, sitting height accounted for 42-53% of the racial gap, while diet and socio-economic status accounted for 7-10% of the racial differences [@harik-khan2004]. However, these studies consider a limited set of social exposures, typically comprised of poverty index, BMI, education, employment, and household size and were conducted using older US National Health and Nutrition Examination Survey (NHANES) III survey data (1988–1994).
 
@@ -80,7 +80,9 @@ We hypothesized that accounting for a more comprehensive set of social and envir
 
 ## Methods
 
-We used data from three cycles of NHANES (2007-2012) to define 10 increasingly healthier reference populations. We included self-identified Black and White individuals with valid height recording and high-quality spirometry. Starting from the base reference population of non-smokers with no diagnoses of lung diseases or respiratory symptoms, we sequentially excluded those with confirmed occupational exposures, physical inactivity, maternal smoking, obesity (defined as body-mass-index≥30), no home ownership, no insurance, lower education, and self-declared unhealthy diet.
+We used data from three cycles of NHANES (2007-2012) with appropriate sampling weights to account for complex survey design. We included self-identified Black and White individuals with valid height recording and baseline spirometry that either met or exceeded ATS collection standards. We defined 10 increasingly healthier reference populations. Starting from the base reference population of non-smokers with no diagnoses of lung diseases or respiratory symptoms, we sequentially excluded those with confirmed occupational exposures, physical inactivity, maternal smoking, obesity (defined as body-mass-index≥30), no home ownership, no insurance, lower education, and self-declared unhealthy diet.
+
+Occupational exposure was defined as having ever been exposed to either mineral dusts (OCQ510), organic dusts (OCQ530), exhaust fumes (OCQ550), or other fumes (OCQ570) at work. Indivdiuals who did not have at least 10 minutes of vigorous or moderate activity in a typical week, either for work or recreationally (PAQ605, PAQ620, PAQ650, PAQ665), were considered physically inactive. Lower educated individuals were defined as adults 20 years of age and older with a high school or a GED degree or lower (DMDEDUC2), and 6-19 years old who were neither in school nor on vacation from school (DMDSCHOL). Individuals with self-declared their dietary health as either poor or fair (DBQ700) were considered to have a unhealthy diet.
 
 For each reference population, the racial gap was calculated as the average difference between Black and White populations adjusted by age, height, and sex in a linear regression. We evaluated the reduction in the racial gap separately for youth (\<20 yrs) and adults (≥20 yrs). The distinction between adults and youth was made based on how NHANES data is structured; for example, the educational level variable is only available for those 20 years of age and older.
 
@@ -316,7 +318,7 @@ if (ageGroup=="adult") {
 
 if (ageGroup=="youth") {
   ref9 <- ref8 %>%
-    filter(is.na(now_attending_school) | (now_attending_school != 3))  %>%
+    filter(is.na(now_attending_school) | (now_attending_school != 3)| (age<6))  %>%
   mutate(ref="educated")
 }
 
@@ -784,21 +786,17 @@ In the supplementary material, we also explored the intersection of self-identif
 
 Our results reinforce the critical role of environmental, social, and lifestyle factors in shaping health outcomes and suggest that a substantial portion of the racial gap in lung function can be explained by SDoH, with up to 26% of the gap in adults, and as much as 35% in males under 20 years of age, attributed to these factors. Our findings attribute a higher proportion of racial differences in lung function to social and environmental exposures than previously reported [@harik-khan2001; @harik-khan2004].
 
-The higher explained proportion of the racial gap in lung function among individuals born in the US (i.e., up to 36% of the racial gap in adult FEV~1~ explained by the studied exposures) suggests that systemic factors such as racism, segregation, red-zoning, and other socio-economic inequities profoundly impact lung health. This aligns with the growing body of literature that implicates historical and structural inequities, such as redlining and differential environmental exposures, in perpetuating health disparities among racialized communities.
+The higher explained proportion of the racial gap in lung function among individuals born in the US (i.e., up to 36% of the racial gap in adult FEV~1~ explained by the studied exposures) suggests that US-specific systemic factors such as racism, segregation, red-zoning, and other socio-economic inequities profoundly impact lung health. This aligns with several studies have reported significantly higher health burdens in US-born racialized people compared to racialized immigrants to the US [@doamekpor2015; @brown2017] and the growing body of literature that implicates historical and structural inequities, such as redlining and differential environmental exposures, in perpetuating health disparities among racialized communities in general [@nardone2020; @schuyler2022; @gaffney2021; @levy2018].
 
-Our analysis revealed that excluding individuals based on home ownership, BMI, and occupational exposures accounts for a significant portion of the explainable racial gap, indicating that financial stability, physical health, and work-related factors are pivotal contributors to lung function disparities. These findings suggest that interventions aimed at reducing socio-economic inequities could potentially mitigate a significant portion of racial gaps in lung function.
+Our analysis revealed that excluding individuals based on home ownership, BMI, and occupational exposures accounts for a significant portion of the explainable racial gap, indicating that financial stability, physical health, and work-related factors are pivotal contributors to lung function disparities.
 
-Our study highlights the necessity for further research to comprehensively understand the interplay between SDoH, environmental exposures, and lung function across different populations. Future studies should aim to incorporate a wider array of SDoH, such as stress levels, access to healthcare, neighborhood safety, and intergenerational wealth effects. There is also a need for longitudinal studies that can elucidate causal pathways and the potential impact of policy changes on reducing health disparities.
+Our study highlights the necessity for further research to comprehensively understand the interplay between SDoH, environmental exposures, and lung function across different populations. Future studies should aim to incorporate a wider array of SDoH, such as stress levels, access to healthcare, neighborhood safety, and intergenerational wealth effects. There is also a need for longitudinal studies that can elucidate causal pathways and the potential impact of policy changes on reducing health disparities. Moreover, exploring the intersectionality of race, gender identity, and other demographic factors could provide a more nuanced understanding of how diverse identities influence lung health outcomes. Expanding research to include international cohorts could enhance the generalizability of findings and support the development of global strategies to address lung health disparities.
 
-Moreover, exploring the intersectionality of race, gender identity, and other demographic factors could provide a more nuanced understanding of how diverse identities influence lung health outcomes. Expanding research to include international cohorts could enhance the generalizability of findings and support the development of global strategies to address lung health disparities.
-
-Certain limitations must be acknowledged. Our reliance on NHANES data restricts generalizability beyond the United States and hinders our ability to explore nuanced race and ethnicity groups. The available data also limits our assessment of various SDoH and environmental exposures, such as intergenerational wealth effects and life-course exposure to pollutants. Additionally, the absence of data on gender identity prevented us from analyzing potential differential effects.
+Certain limitations must be acknowledged. Our reliance on NHANES data restricts generalizability beyond the United States and hinders our ability to explore nuanced race and ethnicity groups. Incomplete understand and limited nature of available data also limits our assessment of complex social and environmental exposures, such as effects of racism, intergenerational wealth effects, life-course exposure to pollutants, violence, stress, and allostatic load. Additionally, the absence of data on gender identity prevented us from analyzing potential differential effects.
 
 <!--[Does SDoH affect FEV1 beyond race?]-->
 
-These findings have important implications for clinical practice and policy. Our results show a larger than previously known effect of complex exposures on racial gaps in lung function, and the true proportion is likely higher than our estimates. However, the racial gaps in lung function cannot yet be completely explained by disparities in complex exposures. The previous guidelines that recommended race-specific reference equations for pulmonary function testing risk assumed racial gaps in lung function were normal and reinforced inequities by perpetuating the notion of race as a biological determinant, rather than acknowledging the role of modifiable social factors. However, the new race-averaged reference equations also fail to account for our understanding of the the effect size of social and environmental exposures on lung function.
-
-Policymakers should consider strategies to reduce exposure to harmful environmental conditions, improve access to healthcare and education, and address occupational health disparities. Implementing policies that prioritize community-level interventions to enhance air quality, housing, and economic opportunities could play a crucial role in bridging these gaps.
+These findings have important implications for clinical practice and policy. Our results show a larger than previously known effect of complex exposures on racial gaps in lung function, and the true proportion is likely higher than our estimates. However, the racial gaps in lung function cannot yet be completely explained by disparities in complex exposures. The previous guidelines that recommended race-specific reference equations for pulmonary function testing risk assumed racial gaps in lung function were normal and reinforced inequities by perpetuating the notion of race as a biological determinant, rather than acknowledging the role of modifiable social factors[@bhakta2023]. However, the new race-averaged reference equations also fail to account for our understanding of the the effect size of social and environmental exposures on lung function.
 
 ## Conclusions
 
